0028630: Visualization, StdPrs_ShadedShape - do not create Poly_Connect without need